--- a/package.json
+++ b/package.json
@@ -8,9 +8,16 @@
   "author": "Kevin Cooper <cooperka92@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "publish": "git subtree push --prefix dist origin gh-pages"
+    "clean": "rm -rf dist",
+    "build": "yarn run clean && babel src --out-dir dist && cp src/public/* dist/",
+    "deploy": "yarn run build && git subtree push --prefix dist origin gh-pages"
   },
   "dependencies": {
     "tone": "13.8.25"
+  },
+  "devDependencies": {
+    "@babel/cli": "7.7.7",
+    "@babel/core": "7.7.7",
+    "@babel/preset-env": "7.7.7"
   }
 }
