--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "react": "16.12.0",
     "react-dom": "16.12.0",
+    "react-hot-loader": "4.12.18",
     "react-static": "7.2.3",
     "react-static-plugin-reach-router": "7.2.3",
     "react-static-plugin-sitemap": "7.2.3",
