--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-hot-loader": "4.12.18",
+    "react-piano-component": "0.1.4",
     "react-static": "7.2.3",
     "react-static-plugin-reach-router": "7.2.3",
     "react-static-plugin-sitemap": "7.2.3",
