--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     }
   },
   "dependencies": {
+    "classnames": "2.2.6",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-hot-loader": "4.12.18",
-    "react-piano-component": "0.1.4",
+    "react-piano-component": "cooperka/react-piano-component#2019-12-27-v0.1.4-pianoKeyProps-index",
     "react-static": "7.2.3",
     "react-static-plugin-reach-router": "7.2.3",
     "react-static-plugin-sitemap": "7.2.3",
