--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     }
   },
   "dependencies": {
+    "@material-ui/core": "4.8.2",
+    "@material-ui/icons": "4.5.1",
     "classnames": "2.2.6",
     "lodash": "4.17.15",
     "react": "16.12.0",
