:shirt: Allow variables to be declared below classes

--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,9 @@
     // --- Handled by Prettier
     "indent": "off",
 
+    // Only be strict about classes, the only one that's dangerous.
+    "no-use-before-define": ["error", { "functions": false, "classes": true, "variables": false }],
+
     // Just don't need it for this project
     "react/prop-types": "off",
 
