--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,31 @@
-# Dependencies
+# See http://help.github.com/ignore-files/ for more about ignoring files.
+
+# Dependencies.
 node_modules/
 
-# Artifacts
-artifacts/
+# Secrets.
+.env
+
+# Build artifacts.
+lib/
+build/
 dist/
+artifacts/
 tmp/
+out/
+.firebase/
+.netlify/
+
+# Testing.
+coverage/
+
+# Logs.
+*.log
+
+# IDE files.
+.idea/*
+!.idea/runConfigurations
 
 # Misc.
-.env
-npm-*.log*
-yarn-*.log*
 .DS_Store
-
-# IDEs
-.idea/*
-!/.idea/runConfigurations/
+.eslintcache
