--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "serve": "serve dist -p 3000",
     "stage": "yarn run build --staging && yarn run serve",
     "analyze": "yarn run build --analyze",
-    "deploy": "yarn run build && scripts/publish.sh"
+    "deploy": "yarn run build && netlify deploy"
   },
   "dependencies": {
     "@fontsource/roboto": "4.0.1",
@@ -48,6 +48,7 @@
     "jest": "26.6.3",
     "jest-watch-typeahead": "0.6.1",
     "lsr-tooling": "1.1.0",
+    "netlify-cli": "2.69.11",
     "prettier": "2.2.1",
     "pretty-quick": "3.1.0",
     "react-test-renderer": "17.0.1",
